implemented role change in edit user